<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/yellow"
    app:cardCornerRadius="@dimen/weather_item_radius"
    app:contentPadding="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_large">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWeather"
            android:layout_width="@dimen/weather_image_dia"
            android:layout_height="@dimen/weather_image_dia"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCityName"
            style="@style/baseText.medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivWeather"
            tools:text="Mumbai" />

        <androidx.appcompat.widget.AppCompatTextView            android:id="@+id/tvTemp"
            style="@style/baseText.medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivWeather"
            app:layout_constraintTop_toTopOf="@id/ivWeather"
            tools:text="@string/temp_main" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTempMinMax"
            style="@style/baseText.normal"
            tools:text="@string/temp_min_max"
            app:layout_constraintStart_toEndOf="@id/ivWeather"
            app:layout_constraintStart_toStartOf="@id/tvTemp"
            app:layout_constraintTop_toBottomOf="@id/tvTempUnit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTempUnit"
            style="@style/baseText.Large"
            android:gravity="top"
            android:includeFontPadding="false"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvTemp"
            app:layout_constraintTop_toTopOf="@id/tvTemp"
            tools:text="@string/letter_celcius"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWeatherInfo"
            style="@style/baseText.medium"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvTemp"
            app:layout_constraintTop_toBottomOf="@id/tvTempMinMax"
            tools:text="@string/weather_info" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHumidity"
            style="@style/baseText.normal"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@+id/tvPressure"
            app:layout_constraintStart_toStartOf="@id/ivWeather"
            app:layout_constraintTop_toBottomOf="@id/ivWeather"
            tools:text="@string/humidity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPressure"
            style="@style/baseText.normal"
            android:layout_width="0dp"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvHumidity"
            app:layout_constraintTop_toTopOf="@id/tvHumidity"
            tools:text="@string/pressure" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabelWind"
            style="@style/baseText.medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/wind"
            android:textStyle="bold"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHumidity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWindSpeed"
            style="@style/baseText.normal"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toStartOf="@+id/tvWindDegree"
            app:layout_constraintStart_toStartOf="@id/ivWeather"
            app:layout_constraintTop_toBottomOf="@id/tvLabelWind"
            tools:text="@string/wind_speed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWindDegree"
            style="@style/baseText.normal"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvWindSpeed"
            app:layout_constraintTop_toTopOf="@id/tvWindSpeed"
            tools:text="@string/wind_degree" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>